--- a/blip-state/src/main/resources/application.properties
+++ b/blip-state/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=3000
 z.api-url: https://67ab51a95853dfff53d6f4da.mockapi.io/
 z.api-client-token: token
 discord.api-url: https://discord.com/api/webhooks
-discord.webhook: /1340030025025589398/2cAmTnohtxsLhqBGUDNs2trQ8aSXQM9eo0rU9h-btehPU7vv_bYdfB2X2ts4dWOEHK1S
+discord.webhook: 
 
 valid-phone: 5544999999999
